--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -1,5 +1,5 @@
 {% extends 'web/base/base.html' %}
-{% load static solo_tags inclusion_tags cache %}
+{% load static solo_tags inclusion_tags cache i18n %}
 
 {% block title %}
     Inicio
