--- a/templates/web/empresa.html
+++ b/templates/web/empresa.html
@@ -164,7 +164,7 @@
             <div class="container py-3" id="opinions">
                 <h2 class="h2-responsive text-center mt-3 mb-3 font-up font-bold grey-text-2 wow fadeIn"
                     data-wow-delay="0.2s">
-                    NUESTROS ALIADOS</h2>
+                    {% trans 'NUESTROS ALIADOS' %}</h2>
                 <div class="flex-center logos-panel">
                     <div class="row justify-content-center text-white text-center wow fadeIn" data-wow-delay="0.2s">
                         {% cache 86400 index_cache_empresa_aliados cache_configuracion.empresa_update %}
