--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -1,5 +1,6 @@
 {% extends 'web/base/base.html' %}
 {% load static solo_tags inclusion_tags cache i18n %}
+{% get_current_language as LANGUAGE_CODE %}
 
 {% block title %}
     Inicio
@@ -64,7 +65,13 @@
                             <div>
                                 {#                                <h1 class="white-text brand-name font-up font-bold">{{ index_configuracion.header_titulo }}</h1>#}
                                 {#                            <h5 class="white-text">Our 24 Hour's Services</h5>#}
-                                <h3 class="white-text font-bold odeco-font mb-2">{{ index_configuracion.header_text }}</h3>
+                                <h3 class="white-text font-bold odeco-font mb-2">
+                                    {% if LANGUAGE_CODE == 'en' %}
+                                        {{ index_configuracion.header_text_en }}
+                                    {% else %}
+                                        {{ index_configuracion.header_text }}
+                                    {% endif %}
+                                </h3>
                             </div>
                         </div>
                         <div class="col-12 wow fadeIn" data-wow-delay="0.3s">
