Bases Idioma Ingles para Soluciones

--- a/templates/web/soluciones/solucion_detail.html
+++ b/templates/web/soluciones/solucion_detail.html
@@ -1,5 +1,6 @@
 {% extends 'web/base/base.html' %}
-{% load cache static inclusion_tags %}
+{% load cache static inclusion_tags i18n %}
+{% get_current_language as LANGUAGE_CODE %}
 
 {% block title %}
     {{ solucion_objeto.nombre }}
@@ -8,7 +9,11 @@
 
 
 {% block cabezote %}
-    {% include 'web/base/cabezote.html' with titulo=solucion_objeto.nombre texto=solucion_objeto.descripcion_corta imagen=solucion_objeto.header_imagen.url %}
+    {% if LANGUAGE_CODE == 'en' %}
+        {% include 'web/base/cabezote.html' with titulo=solucion_objeto.nombre_en imagen=solucion_objeto.header_imagen.url %}
+    {% else %}
+        {% include 'web/base/cabezote.html' with titulo=solucion_objeto.nombre imagen=solucion_objeto.header_imagen.url %}
+    {% endif %}
 {% endblock %}
 
 
@@ -18,13 +23,17 @@
             <div class="col-12 pl-3 pr-3 pl-sm-0 pr-sm-0 order-2 order-sm-1">
                 {% botones_soluciones %}
             </div>
-            {% cache 86400 cache_solucion solucion_objeto.pk solucion_objeto.modified %}
+            {% cache 86400 cache_solucion solucion_objeto.pk solucion_objeto.modified LANGUAGE_CODE %}
                 {% with items_list=mis_items.all|dictsort:"categoria" %}
                     {% regroup items_list by categoria as categoria_list %}
                     <div class="col-12 order-1 order-sm-2">
                         <section class="section">
                             <div class="mt-4">
-                                {{ solucion_objeto.texto|safe }}
+                                {% if LANGUAGE_CODE == 'en' %}
+                                    {{ solucion_objeto.texto_en|safe }}
+                                {% else %}
+                                    {{ solucion_objeto.texto|safe }}
+                                {% endif %}
                             </div>
                             {% if items_list %}
                                 {% if categoria_list|length > 1 %}
