--- a/templates/web/soluciones/solucion_detail.html
+++ b/templates/web/soluciones/solucion_detail.html
@@ -24,8 +24,13 @@
                 {% botones_soluciones %}
             </div>
             {% cache 86400 cache_solucion solucion_objeto.pk solucion_objeto.modified LANGUAGE_CODE %}
-                {% with items_list=mis_items.all|dictsort:"categoria" %}
-                    {% regroup items_list by categoria as categoria_list %}
+                {% with items_list=mis_items.all|dictsort:"categoria_item.orden"|dictsort:"orden" %}
+                    {% if LANGUAGE_CODE == 'en' %}
+                        {% regroup items_list by categoria_item.nombre_en as categoria_list %}
+                    {% else %}
+                        {% regroup items_list by categoria_item.nombre as categoria_list %}
+                    {% endif %}
+
                     <div class="col-12 order-1 order-sm-2">
                         <section class="section">
                             <div class="mt-4">
@@ -40,10 +45,13 @@
                                     <nav class="navbar navbar-soluciones navbar-expand-lg scrolling-navbar d-none d-md-block">
                                         <ul class="navbar-nav navbar-nav-soluciones smooth-scroll">
                                             {% for categoria in categoria_list %}
-                                                <li class="nav-item">
-                                                    <a class="color-1-odecopack nav-link-soluciones" data-offset="120"
-                                                       href="#{{ categoria.grouper|slugify }}">{{ categoria.grouper|upper }}</a>
-                                                </li>
+                                                {% if categoria.grouper %}
+                                                    <li class="nav-item">
+                                                        <a class="color-1-odecopack nav-link-soluciones"
+                                                           data-offset="120"
+                                                           href="#{{ categoria.grouper|slugify }}">{{ categoria.grouper|upper }}</a>
+                                                    </li>
+                                                {% endif %}
                                             {% endfor %}
                                         </ul>
                                     </nav>
@@ -54,15 +62,17 @@
                                         </a>
                                         <ul class="smooth-scroll" style="width: 1px">
                                             {% for categoria in categoria_list %}
-                                                <li>
-                                                    <a class="btn-floating btn-floating-categoria waves-effect waves-light"
-                                                       data-offset="100"
-                                                       href="#{{ categoria.grouper|slugify }}"
-                                                       style="transform: scaleY(0.4) scaleX(0.4) translateY(40px) translateX(0px); opacity: 0;"
-                                                    >
-                                                        {{ categoria.grouper|title }}
-                                                    </a>
-                                                </li>
+                                                {% if categoria.grouper %}
+                                                    <li>
+                                                        <a class="btn-floating btn-floating-categoria waves-effect waves-light"
+                                                           data-offset="100"
+                                                           href="#{{ categoria.grouper|slugify }}"
+                                                           style="transform: scaleY(0.4) scaleX(0.4) translateY(40px) translateX(0px); opacity: 0;"
+                                                        >
+                                                            {{ categoria.grouper|title }}
+                                                        </a>
+                                                    </li>
+                                                {% endif %}
                                             {% endfor %}
                                         </ul>
                                     </div>
@@ -73,17 +83,11 @@
                                             {% if categoria.grouper %}
                                                 <h2 class="h2-responsive mt-4 text-center text-sm-left texto-color-1-odecopack">{{ categoria.grouper|upper }}</h2>
                                             {% endif %}
-                                            {% regroup categoria.list by categoria_dos as categoria_dos_list %}
-                                            {% for categoria_dos in categoria_dos_list %}
-                                                {% if categoria_dos.grouper %}
-                                                    <h4 class="h4-responsive text-center text-sm-left pl-0 pl-sm-2">{{ categoria_dos.grouper|title }}</h4>
-                                                {% endif %}
-                                                <div class="row lista pl-0 pl-sm-4 pr-1">
-                                                    {% for item in categoria_dos.list %}
-                                                        {% include 'web/soluciones/item.html' with item=item %}
-                                                    {% endfor %}
-                                                </div>
-                                            {% endfor %}
+                                            <div class="row lista pl-0 pl-sm-4 pr-1">
+                                                {% for item in categoria.list %}
+                                                    {% include 'web/soluciones/item.html' with item=item %}
+                                                {% endfor %}
+                                            </div>
                                         </div>
                                     {% endfor %}
                                 </div>
