--- a/templates/web/casos_exito/casos_exito_list.html
+++ b/templates/web/casos_exito/casos_exito_list.html
@@ -1,8 +1,8 @@
 {% extends 'web/base/base.html' %}
-{% load cache static inclusion_tags solo_tags %}
+{% load cache static inclusion_tags solo_tags i18n %}
 
 {% block title %}
-    Casos de Éxito
+    {% trans 'CASOS ÉXITO'|title %}
 {% endblock %}
 
 
